--- a/css/styles.css
+++ b/css/styles.css
@@ -949,12 +949,12 @@ main{
     transform: translateY(-2px);
 }
 
-.add-watchlist-btn.added {
+.added {
     background: var(--accent-purple);
     cursor: pointer;
 }
 
-.add-watchlist-btn.added:hover {
+.added:hover {
     background:var(--accent) ;
     
 }
