edit some padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -894,7 +894,10 @@ main{
   background: #000;
   color: #666;
 }
-
+ .fa-heart {
+            color: #e74c3c; /* Red color */
+            margin: 0 5px;
+        }
 @media (max-width: 604px) {
   .footer-main {
     align-items: center;
