--- a/css/about.css
+++ b/css/about.css
@@ -357,6 +357,7 @@
     border-radius: 50px;
     font-weight: 600;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 
 .btn-secondary {
