--- a/css/profile.css
+++ b/css/profile.css
@@ -927,7 +927,7 @@
 .booking-modal-large {
     background: var(--main-dark);
     border-radius: 20px;
-    padding: 30px;
+    padding:15px;
     max-width: 500px;
     width: 90%;
     border: 2px solid var(--accent-purple);
@@ -937,8 +937,11 @@
 .booking-modal-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+    align-items:flex-start;
+    margin-top:0px;
+    margin:0px;
+    padding:0px;
+ 
 }
 
 .booking-detail-row {
@@ -956,6 +959,7 @@
 
 .detail-value {
     color: var(--text-color);
+    border-radius: 4px;
 }
 
 .booking-actions {
@@ -985,11 +989,26 @@
     background: rgba(40, 167, 69, 0.3);
     border-color: #28a745;
 }
+
+.btn-cancel-keep{
+     background: rgba(40, 167, 69, 0.15);
+    color: #28a745;
+    border: 1px solid rgba(40, 167, 69, 0.3);
+     
+}
+.btn-cancel-confirm {
+    background: rgba(220, 53, 69, 0.15);
+    color: #dc3545;
+    border: 1px solid rgba(220, 53, 69, 0.3);
+}
+
 .btn-cancel-keep:hover{
-     background-color:  #28a745;
+     background: rgba(40, 167, 69, 0.25);
+    border-color: #28a745;
 }
 .btn-cancel-confirm:hover {
-    background-color: #dc3545;
+    background: rgba(220, 53, 69, 0.25);
+    border-color: #dc3545;
 }
 .btn-cancel {
     background: rgba(220, 53, 69, 0.2);
